tests/snapshots/test_runner__tests__compiler__typecheck__record_update_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo (_: Int): String = "Hello"

entry
  let a = (x = 2);
  let b = a.(x = a.x foo); // expected Int, got String
  "hello" print

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_update_3.kk:5:18
  │
5 │   let b = a.(x = a.x foo); // expected Int, got String
  │                  ^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Int         | + String    |
    +---------------+-------------+
